# 100days-gpu-challenge

./: .gitignore  README.md
day001/: vector_add_cuda.cpp
day003/: softmax.cu
day004/: CMakeLists.txt
day005/: CMakeLists.txt
day007/: matrix_transpose.cu
day008/: rmsnorm.cu
day010/: rmsnorm.cu
day011/: convolution_1d.cu
day012/: README.md  onlinesoftmax.cu
day013/: onlinesoftmax.cu
day014/: README.md
day015/: CMakeLists.txt  main.py  setup.py
day019/: CMakeLists.txt  main.py  setup.py
day019/src/: custom_flash.cc  custom_flash.cu  custom_flash.cuh
day020/: matmul.py
day021/: dropout.py
day022/: layernorm.py
day023/: layernorm.py
day024/: layernorm.py
day025/: transpose.py
day026/: swiglu.py
day027/: swiglu.py
day028/: swiglu.py
day029/: rope.py
day030/: rope.py
day032/: flashattn.py
day033/: flashattn.py
day034/: flashattn.py
day035/: flashattn.py
day036/: fp8_gemm.py
day037/: fp8_gemm.py
day038/: fp8_gemm.py
day039/: fp8_gemm_splitk.py
day040/: README.md
day041/: fp8_gemm_per_tensor.py  torch_compile_study.py
day042/: README.md
day043/: fp8_gemm_per_tensor.py
day044/: fp8_gemm_per_tensor.py
day045/: fp8_gemm_per_blcok.py  fp8_gemm_per_token.py
day046/: fp8_gemm_per_block.py
day047/: triton_blockwise_gemm.py
day048/: fp8_gemm_per_block.py
day049/: fp8_gemm_per_block.py
day050/: group_gemm.py
day051/: group_gemm.py
day052/: group_gemm.py  reference.py
day053/: custom_kernel.py  reference.py
day054/: custom_kernel.py  reference.py
day055/: custom_kernel.py  reference.py
day056/: README.md  custom_kernel.py  reference.py
day057/: README.md
day058/: colorInversion.cu  matmul.cu
day059/: leacky_relu.cu  relu.cu  reverse_array.cu
day060/: matrix_copy.cu  rainbow_table.cu
day061/: reduction.cu
day062/: main.cu  softmax  softmax1
day063/: genio.py  softmax.cu  softmax4.cu  utils.cpp  utils.hpp
day064/: dot_product  dot_product.cu
day065/: matrixValidationFailure.txt  sgemm  (+1 more)
(+21 files in other folders)
